infrastructure/kubernetes/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-monitoring
  labels:
    name: example-monitoring
    monitoring: enabled
